# iceberg-lakehouse

./: .gitignore  README.md  pyproject.toml
benchmarks/: format_comparison.py
docs/: benchmarks.md  format-comparison.md  migration.md  vortex-research.md  vortex.md  vortex_poc.py
examples/: migrate_to_vortex.py  mixed_format.py  vortex_basic.py
src/lakehouse/: __init__.py  _vortex_compat.py  audit.py  auto_refresh.py  backup.py  catalog.py  catalog_metadata.py  cdc.py  cli.py  cloning.py  config.py  contracts.py  dashboard.py  dedup.py  incremental.py  joins.py  lineage.py  maintenance.py  masking.py  matviews.py  notifications.py  optimizer.py  pipelines.py  quality.py  queries.py  query.py  query_cache.py  retention.py  sampling.py  schema_evolution.py  server.py  sla.py  stats.py  tagging.py  validation.py  views.py  vortex_io.py
tests/: __init__.py  conftest.py  test_audit.py  test_auto_refresh.py  test_backup.py  test_batch.py  test_benchmarks.py  test_catalog_metadata.py  test_cdc.py  test_cloning.py  test_config.py  test_contracts.py  test_dashboard.py  test_dedup.py  test_delete.py  test_export.py  test_import.py  test_incremental.py  test_insert.py  test_joins.py  test_lineage.py  test_maintenance.py  test_maintenance_policies.py  test_masking.py  test_matviews.py  test_namespace.py  test_notifications.py  test_optimizer.py  test_partitioning.py  test_pipelines.py  test_profile.py  test_quality.py  test_queries.py  test_query_cache.py  test_retention.py  test_sampling.py  test_schema.py  test_schema_evolution.py  test_sla.py  test_snapshot_diff.py  (+12 more)
