[project]
name = "iceberg-lakehouse"
version = "0.1.0"
description = "Local-first data lakehouse with Iceberg storage and LLM access"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "pyiceberg[pyarrow,duckdb,sql-sqlite]>=0.7.0",
    "mcp>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "sqlalchemy>=2.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
lakehouse = "lakehouse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lakehouse"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
